argocd/smart-home/vscode/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vscode
  namespace: homeassistant
  labels:
    app: vscode
spec:
  selector:
    matchLabels:
      app: vscode
  replicas: 1
  template:
    metadata:
      labels:
        app: vscode
    spec:
      containers:
      - name: vscode
        image: ghcr.io/hassio-addons/vscode/amd64:5.17.2
        volumeMounts:
        - mountPath: /config
          name: config
        resources:  {}
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: vscode-config
