argocd/smart-home/vscode/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vscode
  namespace: homeassistant
spec:
  selector:
    app: vscode
  type: ClusterIP
  ports:
    - name: vscode
      port: 8443
      protocol: TCP 
      targetPort: 8443
