argocd/smart-home/vscode/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vscode
  namespace: homeassistant
spec:
  ingressClassName: nginx
  rules:
  - host: hacode.legion.lan
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vscode
            port:
              number: 1337
